name:                antler
version:             0.1.0.0
synopsis:            Parses Xbase files.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              chrisdotcode
maintainer:          chris@code.sc
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable antler
      main-is:             Main.hs
      -- other-modules:       
      -- other-extensions:    
      build-depends:       attoparsec        == 0.12.1.2
                         , attoparsec-binary == 0.2
                         , base              >= 4.7 && <4.8
                         , bytestring        == 0.10.4.0
                         , time              == 1.4.2
      -- hs-source-dirs:      
      default-language:    Haskell2010
      ghc-options:         -Wall
